[package]
name = "truestory"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "truestory"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
chainlink_solana = "1.0.0"
reqwest = "0.12.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-program = "2.0.13"  # Corrected from `solana_program` to `solana-program`
zeroize = "1.3.0"


[patch.crates-io]
zeroize = { version = "1.3.0" }
